src/components/Video/VideoContainer.css
.video-container {
    display: flex;
    align-items: center;
    justify-content: center;
    background: black;
    position: relative;
    overflow: hidden;
}
.video-pad {
    padding: 10px;
}

.video-participant-wrapper {
    position: relative;
    max-height: 100%;
    padding-bottom: 56.25%;
    overflow: hidden;
}

.preview-video {
    position: absolute;
    top: 0;
    right: 0;
    margin: 20px;
    margin-bottom: 0;
    width: 175px;
    padding-bottom: 20px;
    z-index: 1;
}

.preview-video-wrapper {
    height: 0;
    width: 100%;
    padding-bottom: 56.25%;
    overflow: hidden;
    position: relative;
}

.preview-video video {
    height: 100%;
    width: 100%;
    object-fit: cover;
    position: absolute;
}

.videos-list-wrapper {
    max-height: 100%;
    max-width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
}

.controls-wrapper {
    position: absolute;
    bottom: 0;
    margin-bottom: 20px;
    font-size: 20px;
    color: #f1f1f1;
    opacity: 0;
    transition: opacity 200ms ease-in-out;
    transition-delay: 500ms;
    z-index: 1;
}

.controls-wrapper span {
    height: 50px;
    width: 50px;
    border-radius: 50%;
    background: #3a3a3a;
    padding: 5px;
    margin: 0 10px;
    display: inline-flex;
    justify-content: center;
    align-items: center;
}

.video-container:hover .controls-wrapper {
    opacity: 1;
    transition-delay: 0ms;
}

@media only screen and (max-width: 600px) {
    .preview-video {
        width: 150px;
        bottom: 80px;
    }

}

